# watchcorgi

./: .gitignore  README.md  watchcorgi-client.service  watchcorgi-server.service  watchdog-client.service  watchdog-server.service
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
watchcorgi/: Cargo.toml
watchcorgi/src/: main.rs
