[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
once_cell = "^1"
rust-ini = "^0"
sqlx = { version = "^0", features = [ "runtime-tokio-native-tls", "postgres" ] }
