[package]
name = "watchcorgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "^0", features = ["vendored"] }

[dependencies]
systemstat = "^0"
chrono = "^0"
reqwest = { version = "^0", features = ["json", "blocking"] }
tokio = { version = "^1", features = ["full"] }
clap = { version = "^4", features = ["derive"] }
